--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <ul
                                 onclick="getElementById('close-menu').checked=false;"
                             >
-                                <li><a href="#inicio">nos</a></li>
+                                <li><a href="#inicio">inicio</a></li>
                                 <li><a href="#sobre-mim">Sobre nos</a></li>
                                 <li><a href="#projetos">Localizaçao</a></li>
                                 <li><a href="#habilidades">serviços</a></li>
@@ -97,7 +97,7 @@
                             <div class="desenho">
                                 <img
                                     class="desenho2"
-                                    src="WhatsApp Image 2024-02-15 at 14,09,33,jpeg"
+                                    src=""
                                     alt="Eu-em-desenho"
                                 />
                             </div>
