--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="desenho">
                                 <img
                                     class="desenho2"
-                                    src=""
+                                    src="WhatsApp Image 2024-02-18 at 14,09,33,jpeg"
                                     alt="Eu-em-desenho"
                                 />
                             </div>
