--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <link rel="stylesheet" href="eeuu.css">
+        <link rel="stylesheet" href="aa.css">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -166,15 +166,27 @@
                         <h2 class="project">Serviços</h2>
                          
                         <p class="serviços1">
-                            <div class="listas">
-                            <li >Lavamos e Passamos qualquer tipo de peças de roupas</li>
-                            <li >Lavamos tennis, sapatos, bota </li>
-                            <li >Buscamos e Entregamos com uma certa quantia de peças</li>
-                            <li >Higienizamos vestidos de noivas</li>
-                            <li >Higienizamos ternos, blazes e paletós</li>
-                            <li >Higienizamos estofados, colchao, sofa </li>
+                          
+                            <div class="conteiner-skills">
+                                <div class="skill-box">
+                                    <p>Lavamos e passamos qualquer tipo de peças de roupas</p>
+                                </div>
+                                <div class="skill-box">
+                                    <p>Lavamos tênis, sapatos e botas</p>
+                                </div>
+                                <div class="skill-box">
+                                    <p>Buscamos e entregamos com uma certa quantia de peças</p>
+                                </div>
+                                <div class="skill-box">
+                                    <p>Higienizamos vestidos de noiva</p>
+                                </div>
+                                <div class="skill-box">
+                                    <p>Higienizamos ternos, blazers e paletós</p>
+                                </div>
+                                <div class="skill-box">
+                                    <p>Higienizamos estofados, colchões e sofás</p>
+                                </div>
                             </div>
-                         </p>
 
                             <br>
                             <br>
